--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ RNA : W783000593
         <div class="actionsC">
           <div class="actionBtn"><a target="_blank" rel="noopener noreferrer" aria-label="Website"
 
-              href="aambconflans.org" style="background-color: rgb(11, 0, 255);">
+              href="www.aambconflans.org" style="background-color: rgb(11, 0, 255);">
               <div class="icon iconColor"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
 
                   xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2"><g><path
